--- a/index.html
+++ b/index.html
@@ -466,6 +466,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
+							<span id="busuanzi_container_site_pv">
+                                                            本站总访问量<span id="busuanzi_value_site_pv"></span>次
+                                                        </span>
 							<ul class="copyright">
 								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
@@ -482,6 +485,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+		        <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
 	</body>
 </html>
