--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<link rel="shortcut icon" href="favicon.ico" />
+		<link rel="shortcut icon" href="images/favicon.ico" />
 		<title>Hello Kyo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
