--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                                                             本站总访问量<span id="busuanzi_value_site_pv"></span>次
                                                         </span>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https://github.com/kyoisme/kyo.github.io">JIAYUAN</a></li>
 							</ul>
 						</div>
 					</section>
