--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 				<header>
 					<span class="image avatar"><img src="images/facephoto.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">JIAYUAN KYO</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<p>啦啦啦啦</p>
 				</header>
 				<nav id="nav">
 					<ul>
